@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.whydah.sso</groupId>
     <artifactId>Whydah-Admin-SDK</artifactId>
-    <version>2.27.4-SNAPSHOT</version>
+    <version>2.30.0-SNAPSHOT</version>
     <name>Whydah-Admin-SDK</name>
     <packaging>jar</packaging>
     <url>https://wiki.cantara.no/display/iam/Whydah-Admin-SDK</url>
@@ -12,12 +12,13 @@
         <version>8</version>
     </parent>  
     <properties>
+        <jdk.version>21</jdk.version>
         <service.name>Whydah-Admin-SDK</service.name>
-        <whydah.sdk.version>2.27.3</whydah.sdk.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.release>11</maven.compiler.release>
-        <java.version>11</java.version>
+        <whydah.sdk.version>2.30.0</whydah.sdk.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
+        <java.version>21</java.version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
     <scm>
@@ -123,6 +124,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
